# Lily

./: .clang-format  .gitignore  README.md  README_zh-CN.md
data/: back.pcd  front.pcd  top.pcd
src/lily/: CMakeLists.txt  config copy.yaml  config.yaml  config.yaml.bak  config.yaml_2023-10-19 16:12:10  config_yc200_example.yaml  config_yc800_example.yaml  package.xml
src/lily/cfg/: dynamic.cfg
src/lily/include/lily/: auto_calibrator.h  auto_lily.h  calibrator.h  ground_segmentation.h  icp.h  lily.h  manual_lily.h  utils.h
src/lily/launch/: auto.launch  manual.launch
src/lily/rviz/: manual.rviz
src/lily/src/: auto_calibrator.cpp  auto_lily.cpp  calibrator.cpp  ground_segmentation.cpp  icp.cpp  lily.cpp  lily_node.cpp  manual_lily.cpp  utils.cpp
